# freestanding_diamond

./: diamond.cc  exit_group.s  freestanding_diamond.cc  meson.build  start.s  write.s
